--- a/public/css/app.css
+++ b/public/css/app.css
@@ -15216,13 +15216,20 @@ a {
 .container.index {
   max-width: 1260px;
 }
-
 .container.index .product-item img {
   width: 70%;
 }
-
 .container.index .product-item li {
   color: #3396a8;
+}
+
+.container.page {
+  margin-top: 50px;
+}
+.container.page .content {
+  background-color: #ffffff;
+  padding: 20px 70px 20px 70px;
+  margin-bottom: 70px;
 }
 
 .container.cart {
