Product page design.

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -153,7 +153,8 @@ a {
   }
 }
 
-.container.page {
+.container.page,
+.container.product {
   margin-top: 50px;
   .content {
     background-color: #ffffff;
