Bootstrap 5 + hamburger menu

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -5,6 +5,7 @@
 @import "variables";
 
 // Bootstrap
+//@import "node_modules/bootstrap/dist/css/bootstrap";
 @import "node_modules/bootstrap/dist/css/bootstrap";
 
 // Cookie consent
