--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -154,12 +154,13 @@ a {
   }
 }
 
-.container.page,
-.container.product {
+.container-fluid.page,
+.container-fluid.product {
   margin-top: 50px;
+  padding: 0 !important;
   .content {
     background-color: #ffffff;
-    padding: 20px 70px 20px 70px;
+    /*padding: 20px 70px 20px 70px;*/
     margin-bottom: 70px;
   }
 }
