--- a/public/css/app.css
+++ b/public/css/app.css
@@ -15190,7 +15190,7 @@ body {
   background-size: 100%;
   background-attachment: fixed;
   background-repeat: no-repeat;
-  /*background-size: cover;*/
+  background-size: cover;
 }
 
 main {
