--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -72,7 +72,7 @@ body {
   background-size: 100%;
   background-attachment: fixed;
   background-repeat: no-repeat;
-  /*background-size: cover;*/
+  background-size: cover;
 }
 
 main {
