--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -77,7 +77,7 @@ body {
 
 main {
   display: block;
-  /*margin-top: 130px;*/
+  margin-top: 130px;
 }
 
 footer {
@@ -168,6 +168,11 @@ a {
     /*padding: 20px 70px 20px 70px;*/
     margin-bottom: 70px;
   }
+}
+
+.grecaptcha-badge {
+  visibility: visible;
+  bottom: 90px !important;
 }
 
 // Cart
