--- a/public/css/app.css
+++ b/public/css/app.css
@@ -15179,6 +15179,8 @@ textarea.form-control-lg {
 .navbar {
   background-color: #FC7829 !important;
   opacity: 0.92;
+  padding-top: 0px !important;
+  padding-bottom: 0px !important;
   border-top: solid 14px #343A40;
 }
 
