--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -61,6 +61,8 @@
 .navbar {
   background-color: #FC7829 !important;
   opacity: 0.92;
+  padding-top: 0px !important;
+  padding-bottom: 0px !important;
   border-top: solid 14px #343A40;
 }
 
