--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -168,6 +168,14 @@ a {
     /*padding: 20px 70px 20px 70px;*/
     margin-bottom: 70px;
   }
+  .image-section {
+    .caption {
+      font-size: 30px;
+      top: 5px;
+      left: calc(100% - 75px);
+      padding: 0px 8px 2px 10px;
+    }
+  }
 }
 
 .grecaptcha-badge {
