--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -145,6 +145,9 @@ a {
     opacity: 0.5;
     z-index: 1;
   }
+  .products-link {
+    font-size: 9vh;
+  }
 }
 
 .container.index {
@@ -200,6 +203,11 @@ a {
 
 .hidden {
   display: none;
+}
+
+a#error {
+  padding-top: 100px !important;
+  display: block;
 }
 
 // Cart
