--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -118,14 +118,16 @@ a {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     width: auto;
     height: auto;
-    min-width: 100%;
-    min-height: 100%;
-    max-width: none;
-    max-height: none;
-    object-fit: contain;
+    max-width: 100%;
+    max-height: 100%;
+    z-index: 0;
+    -ms-transform: translateX(-50%) translateY(-50%);
+    -moz-transform: translateX(-50%) translateY(-50%);
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
+    object-fit: cover;
   }
 
   .video-background-content {
