--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -110,29 +110,24 @@ a {
 .video-background-holder {
   position: relative;
   background-color: black;
-  height: calc(100vh - 75px);
   width: 100%;
+  height: 0;
+  padding-bottom: 56.25%;
   overflow: hidden;
 
   video {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    width: auto;
-    height: auto;
-    max-width: 100%;
-    max-height: 100%;
-    z-index: 0;
-    -ms-transform: translateX(-50%) translateY(-50%);
-    -moz-transform: translateX(-50%) translateY(-50%);
-    -webkit-transform: translateX(-50%) translateY(-50%);
-    transform: translateX(-50%) translateY(-50%);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
   }
 
   .video-background-content {
     position: relative;
     z-index: 2;
+    padding-top: 25%;
   }
 
   .video-background-overlay {
@@ -145,6 +140,7 @@ a {
     opacity: 0.5;
     z-index: 1;
   }
+
   .products-link {
     font-size: 9vh;
   }
