--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -128,6 +128,16 @@ a {
     position: relative;
     z-index: 2;
     padding-top: 25%;
+
+    h1 {
+      font-family: "RussoOne Regular";
+      text-shadow: 4px 3px 0 #000000;
+      color: #FFFFFF;
+    }
+    p {
+      text-shadow: 2px 1px 0 #000000;
+      color: #FFFFFF;
+    }
   }
 
   .video-background-overlay {
@@ -137,7 +147,7 @@ a {
     height: 100%;
     width: 100%;
     background-color: black;
-    opacity: 0.5;
+    opacity: 0.0;
     z-index: 1;
   }
 
