--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -114,6 +114,88 @@ a {
   height: 0;
   padding-bottom: 56.25%;
   overflow: hidden;
+}
+
+.video-background-holder video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.video-background-holder .video-background-content {
+  position: relative;
+  z-index: 2;
+  padding-top: 30%;
+}
+
+.video-background-holder h1 {
+  font-family: "RussoOne Regular";
+  text-shadow: 4px 3px 0 #000000;
+  color: #FFFFFF;
+  padding: 0;
+  margin: 0;
+  font-size: 6vw;
+  line-height: 1.1;
+  text-align: center;
+}
+
+.video-background-holder p {
+  text-shadow: 2px 1px 0 #000000;
+  color: #FFFFFF;
+  padding: 0;
+  margin: 0;
+  font-size: 3vw;
+  line-height: 1.2;
+  text-align: center;
+}
+
+.video-background-holder .video-background-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: black;
+  opacity: 0.0;
+  z-index: 1;
+}
+
+.video-background-holder .products-link {
+  font-size: 9vh;
+}
+
+@media screen and (max-width: 768px) {
+  .video-background-holder h1 {
+    font-size: 10vw;
+    line-height: 1.2;
+  }
+  .video-background-holder p {
+    font-size: 5vw;
+    line-height: 1.3;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .video-background-holder h1 {
+    font-size: 4rem;
+    line-height: 1.1;
+  }
+  .video-background-holder p {
+    font-size: 2rem;
+    line-height: 1.2;
+  }
+}
+
+/*.video-background-holder {
+  position: relative;
+  background-color: black;
+  width: 100%;
+  height: 0;
+  padding-bottom: 56.25%;
+  overflow: hidden;
 
   video {
     position: absolute;
@@ -127,16 +209,20 @@ a {
   .video-background-content {
     position: relative;
     z-index: 2;
-    padding-top: 25%;
+    padding-top: 30%;
 
     h1 {
       font-family: "RussoOne Regular";
       text-shadow: 4px 3px 0 #000000;
       color: #FFFFFF;
+      padding: 0px 0px 0px 0px !important;
+      margin: 0px 0px 2% 0px !important;
     }
     p {
       text-shadow: 2px 1px 0 #000000;
       color: #FFFFFF;
+      padding: 0px 0px 0px 0px !important;
+      margin: 0px 0px 2% 0px !important;
     }
   }
 
@@ -151,48 +237,6 @@ a {
     z-index: 1;
   }
 
-  .products-link {
-    font-size: 9vh;
-  }
-}
-
-/*.video-background-holder {
-  position: relative;
-  background-color: black;
-  height: calc(100vh - 75px);
-  width: 100%;
-  overflow: hidden;
-
-  video {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
-    z-index: 0;
-    -ms-transform: translateX(-50%) translateY(-50%);
-    -moz-transform: translateX(-50%) translateY(-50%);
-    -webkit-transform: translateX(-50%) translateY(-50%);
-    transform: translateX(-50%) translateY(-50%);
-  }
-
-  .video-background-content {
-    position: relative;
-    z-index: 2;
-  }
-
-  .video-background-overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background-color: black;
-    opacity: 0.5;
-    z-index: 1;
-  }
   .products-link {
     font-size: 9vh;
   }
