--- a/public/css/app.css
+++ b/public/css/app.css
@@ -15233,7 +15233,6 @@ a {
   padding-bottom: 56.25%;
   overflow: hidden;
 }
-
 .video-background-holder video {
   position: absolute;
   top: 0;
@@ -15243,34 +15242,27 @@ a {
   -o-object-fit: cover;
      object-fit: cover;
 }
-
 .video-background-holder .video-background-content {
   position: relative;
   z-index: 2;
   padding-top: 30%;
 }
-
-.video-background-holder h1 {
+.video-background-holder .video-background-content h1 {
   font-family: "RussoOne Regular";
   text-shadow: 4px 3px 0 #000000;
   color: #FFFFFF;
-  padding: 0;
-  margin: 0;
-  font-size: 6vw;
-  line-height: 1.1;
-  text-align: center;
+  padding: 0px 0px 0px 0px !important;
+  margin: 0px 0px 2% 0px !important;
+  font-size: 4vw;
+  line-height: 1.2em;
+  max-height: 60px;
 }
-
-.video-background-holder p {
+.video-background-holder .video-background-content p {
   text-shadow: 2px 1px 0 #000000;
   color: #FFFFFF;
-  padding: 0;
-  margin: 0;
-  font-size: 3vw;
-  line-height: 1.2;
-  text-align: center;
+  padding: 0px 0px 0px 0px !important;
+  margin: 0px 0px 2% 0px !important;
 }
-
 .video-background-holder .video-background-overlay {
   position: absolute;
   top: 0;
@@ -15281,31 +15273,17 @@ a {
   opacity: 0;
   z-index: 1;
 }
-
 .video-background-holder .products-link {
   font-size: 9vh;
 }
-
 @media screen and (max-width: 768px) {
-  .video-background-holder h1 {
-    font-size: 10vw;
-    line-height: 1.2;
-  }
-  .video-background-holder p {
-    font-size: 5vw;
-    line-height: 1.3;
+  .video-background-holder .video-background-content h1 {
+    font-size: 3vw;
+    line-height: 1.2em;
+    max-height: 40px;
   }
 }
-@media screen and (min-width: 1200px) {
-  .video-background-holder h1 {
-    font-size: 4rem;
-    line-height: 1.1;
-  }
-  .video-background-holder p {
-    font-size: 2rem;
-    line-height: 1.2;
-  }
-}
+
 /*.video-background-holder {
   position: relative;
   background-color: black;
