--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -59,8 +59,7 @@
 }
 
 .navbar {
-  background-color: #FC7829 !important;
-  opacity: 0.92;
+  background-color: rgba(252, 120, 41, 0.92);
   padding-top: 0px !important;
   padding-bottom: 0px !important;
   border-top: solid 14px #343A40;
@@ -81,8 +80,7 @@ main{
 }
 
 footer {
-  opacity: 0.85;
-  background-color: #44494F;
+  background-color: rgba(68, 73, 79, 0.85);
 }
 
 a {
@@ -241,7 +239,7 @@ a {
   margin-top: 50px;
   padding: 0 !important;
   .content {
-    background-color: #ffffff;
+    background-color: rgba(255, 255, 255, 0.8);
     /*padding: 20px 70px 20px 70px;*/
     margin-bottom: 70px;
   }
