--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -53,6 +53,10 @@
   color: #222222;
 }
 
+.bg-opacity-85 {
+  --bs-bg-opacity: 0.85;
+}
+
 .navbar .navbar-brand {
   font-family: "RussoOne Regular" !important;
   font-size: 3vw;
