--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -283,8 +283,12 @@ a {
 }
 
 a#error {
-  padding-top: 0px !important;
+  padding-top: 100px !important;
   display: block;
+}
+
+a#error.contact {
+  padding-top: 0px !important;
 }
 
 // Cart
